--- a/src/CSharp.AlgebraicTypes.VSIX/CSharp.AlgebraicTypes.VSIX.csproj
+++ b/src/CSharp.AlgebraicTypes.VSIX/CSharp.AlgebraicTypes.VSIX.csproj
@@ -24,8 +24,8 @@
     <ProjectGuid>{F074D8D0-3418-42C9-9F23-9834B392ECB4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CSharp.UnionTypes.VSIX</RootNamespace>
-    <AssemblyName>CSharp.UnionTypes.VSIX</AssemblyName>
+    <RootNamespace>CSharp.AlgebraicTypes.VSIX</RootNamespace>
+    <AssemblyName>CSharp.AlgebraicTypes.VSIX</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
@@ -42,7 +42,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>.\bin\$(Configuration)\$(AssemblyName).xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\CSharp.AlgebraicTypes.VSIX.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
