--- a/src/CSharp.AlgebraicTypes/paket.template
+++ b/src/CSharp.AlgebraicTypes/paket.template
@@ -1,16 +1,16 @@
 type file
 id
-    CSharp.UnionTypes
+    CSharp.AlgebraicTypes
 title
-    CSharp.UnionTypes
+    CSharp.AlgebraicTypes
 owners
     John Azariah
 authors 
     John Azariah
 projectUrl
-    https://github.com/johnazariah/csharp-uniontypes
+    https://github.com/johnazariah/csharp-algebraictypes
 iconUrl
-    https://raw.githubusercontent.com/johnazariah/csharp-uniontypes/master/docs/files/img/logo.png
+    https://raw.githubusercontent.com/johnazariah/csharp-algebraictypes/master/docs/files/img/logo.png
 licenseUrl
     https://github.com/johnazariah/csharp-uniontypes/blob/master/LICENSE.txt
 requireLicenseAcceptance
@@ -18,11 +18,11 @@ requireLicenseAcceptance
 copyright
     Copyright 2015
 tags
-    C# \"Type Theory\" \"Union Types\" \"Discriminated Union Types\" \"Sum Types\"
+    C# \"Type Theory\" \"Algebraic Types\" \"Record Types\" \"Union Types\" \"Discriminated Union Types\" \"Sum Types\" \"Product Types\"
 summary
-    DSL, Parser & Code Generator for Discriminated Union Types (Sum Types) in C#
+    DSL, Parser & Code Generator for Algebraic Data Types (Sum and Product Types) in C#
 description
-    DSL, Parser & Code Generator for Discriminated Union Types (Sum Types) in C#
+    DSL, Parser & Code Generator for Algebraic Data Types (Sum and Product Types) in C#
 files
-    ../../bin/CSharp.UnionTypes/CSharp.UnionTypes.dll ==> lib/net452
-    ../../bin/CSharp.UnionTypes.CLI/* ==> tools
+    ../../bin/CSharp.AlgebraicTypes/CSharp.AlgebraicTypes.dll ==> lib/net452
+    ../../bin/CSharp.AlgebraicTypes.CLI/* ==> tools
