--- a/src/CSharp.UnionTypes.Parser/CSharp.UnionTypes.Parser.fsproj
+++ b/src/CSharp.UnionTypes.Parser/CSharp.UnionTypes.Parser.fsproj
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="AST.fs" />
+    <Compile Include="Parser.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FParsec" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
