--- a/src/CSharp.UnionTypes.Parser/CSharp.UnionTypes.Parser.fsproj
+++ b/src/CSharp.UnionTypes.Parser/CSharp.UnionTypes.Parser.fsproj
@@ -13,9 +13,33 @@
 		<Compile Include="SourceGenerator.fs" />
 	</ItemGroup>
 
+	<PropertyGroup>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<!-- Generates a package at build -->
+		<IncludeBuildOutput>false</IncludeBuildOutput>
+		<!-- Do not include the generator as a lib dependency -->
+	</PropertyGroup>
+
 	<ItemGroup>
-		<PackageReference Update="FSharp.Core" Version="8.0.200" />
-		<PackageReference Include="FParsec" Version="1.1.1" />
+		<PackageReference Update="FSharp.Core" Version="8.0.200" GeneratePathProperty="true" />
+		<PackageReference Include="FParsec" Version="1.1.1" GeneratePathProperty="true" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<!-- Package the generator in the analyzer directory of the nuget package -->
+		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+
+		<!-- Package the Newtonsoft.Json dependency alongside the generator assembly -->
+		<None Include="$(PkgFSharp_Core)\lib\netstandard2.0\*.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+		<None Include="$(PkgFParsec)\lib\netstandard2.0\*.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Remove="bin\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="bin\Debug\netstandard2.0\\CSharp.UnionTypes.Parser.dll" />
 	</ItemGroup>
 
 	<ItemGroup>
