--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,8 +85,8 @@ jobs:
     # You can update this logic if you want to manage releases differently
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
-    # needs:
-    #  - validate_nuget
+    needs:
+      - build
     steps:
       # Download the NuGet package created in the previous job
       - uses: actions/download-artifact@v4
